# python-worker-boilerplate

./: .env.development  .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/core/entities/: hello_command.py
src/core/ports/: logger.py
src/core/use_cases/: base.py  say_hello.py
src/entry_point/http/health/: __init__.py  health_service.py
src/entry_point/sqs/: __init__.py  sqs_consumer.py
src/infra/adapters/logging/: __init__.py  structlog_logger.py
src/infra/config/: __init__.py  queue_config.py  settings.py
