[project]
name = "worker-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tmp*"]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.3",
]
dev = [
    "black==23.12.1",
    "ruff==0.1.8",
    "mypy==1.7.1",
    "watchfiles==0.21.0",
]
production = [
    "python-json-logger==2.0.7",
]

[dependency-groups]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "pytest-cov==4.1.0",
  "pytest-env==1.1.3",
  "black==23.12.1",
  "ruff==0.1.8",
  "mypy==1.7.1",
  "watchfiles==0.21.0",
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod'
]

[tool.coverage.run]
omit = [
  "*/__init__.py",
  "*/health/*",
  "*/main.py"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "B", "C90", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "structlog.*",
]
ignore_missing_imports = true
